samples/_failures_safe/1761523886_eba78b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8482730.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_f8482730.c:117:5: error: expected declaration or statement at end of input
  117 |     printf("Info count: %d\n", analyzer->info_count);
      |     ^~~~~~
